--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ deploy:
     tags: true
 before_install:
   - openssl aes-256-cbc -K $encrypted_9706fc677e49_key -iv $encrypted_9706fc677e49_iv -in github_deploy_key.enc -out ~\/github_deploy_key -d
-#  - composer config --global github-oauth.github.com "$GITHUB_TOKEN"
+  - composer config --global github-oauth.github.com "$GITHUB_TOKEN"
